Checkpoint work on converting deck.php into a Page, not yet complete

--- a/gatherling/templates/partials/changePassForm.mustache
+++ b/gatherling/templates/partials/changePassForm.mustache
@@ -8,7 +8,7 @@
 <form action="player.php" method="post" onsubmit="return validate_pw()">
     <input name="action" type="hidden" value="changePassword" />
     <input name="mode" type="hidden" value="changepass" />
-    <table class="form">';
+    <table class="form">
         <tr>
             <th>Current Password</th>
             <td><input class="inputbox" name="oldPassword" type="password" /></td>
