--- a/gatherling/templates/partials/infoCell.mustache
+++ b/gatherling/templates/partials/infoCell.mustache
@@ -20,4 +20,4 @@ Hosted by {{#hostLink}}{{> playerLink}}{{/hostLink}}
 {{#reportLink}}
     <a href="{{reportLink}}">Event Report</a><br>
 {{/reportLink}}
-<a href="{{seriesReportLink}}">Season Leaderboard</a>
+<a href="{{seasonLeaderboardLink}}">Season Leaderboard</a>
