--- a/gatherling/templates/partials/submitLeagueResultForm.mustache
+++ b/gatherling/templates/partials/submitLeagueResultForm.mustache
@@ -29,10 +29,10 @@
         </tr>
         <!--
             // Allowing the loser to report leads to race conditions :/
-            // echo "<tr><th><input type='radio' name='report' value='L20' /> I lost the match 0-2<br /></th>\n";
-            // echo "<td></td> </tr> \n";
-            // echo "<tr><th><input type='radio' name='report' value='L21' /> I lost the match 1-2</th>\n";
-            // echo "<td></td></tr>\n";
+            // <tr><th><input type='radio' name='report' value='L20' /> I lost the match 0-2<br /></th>
+            // <td></td> </tr>
+            // <tr><th><input type='radio' name='report' value='L21' /> I lost the match 1-2</th>
+            // <td></td></tr>
         -->
         <tr>
             <td colspan="2" class="buttons">
