Refer to mana cost images by correct path

--- a/gatherling/templates/partials/ccTable.mustache
+++ b/gatherling/templates/partials/ccTable.mustache
@@ -5,7 +5,7 @@
     {{#castingCosts}}
         <tr>
             <td align="right" width="75">
-                <img src="images/mana{{cost}}.png" alt="{{cost}}">
+                <img src="styles/images/mana{{cost}}.png" alt="{{cost}}">
                 &nbsp;
             </td>
            <td width="75" align="left">x {{amt}}</td>
