Display deck reg error problems properly

--- a/gatherling/templates/partials/deckForm.mustache
+++ b/gatherling/templates/partials/deckForm.mustache
@@ -32,7 +32,7 @@
                 <td>There are some problems adding your deck:
                     <ul>
                         {{#errors}}
-                            <li class="error">{{error}}</li>
+                            <li class="error">{{.}}</li>
                         {{/errors}}
                     </ul>
                 </td>
