Add missing attrs that make the file upload stuff work for format admin
These got chopped out incorrectly when converting to a Component.

--- a/gatherling/templates/partials/bAndR.mustache
+++ b/gatherling/templates/partials/bAndR.mustache
@@ -87,7 +87,7 @@
         <tr>
             <td colspan="2">
                 <label>Load txt</label>
-                <input class="inputbutton" type="file">
+                <input class="inputbutton" type="file" value="Upload Banned List" link="addbancard" accept=".txt"/>
             </td>
         </tr>
         <tr>
@@ -138,7 +138,7 @@
         <tr>
             <td colspan="2">
                 <label>Load txt</label>
-                <input class="inputbutton" type="file">
+                <input class="inputbutton" type="file" value="Upload Legal List" link="addlegalcard" accept=".txt"/>
             </td>
         </tr>
         <tr>
