Return the series select on seriescp back to action
I should have negated this boolean logic when I refactored.

At some point we will remove all the old-fashioned HTML but for now <center>
is what we use.

--- a/gatherling/templates/partials/organizerSelect.mustache
+++ b/gatherling/templates/partials/organizerSelect.mustache
@@ -1,4 +1,6 @@
-<form action="{{action}}" method="get">
-    {{#seriesDropMenu}}{{> dropMenu}}{{/seriesDropMenu}}
-    <input class="inputbutton" type="submit" value="Select Series">
-</form>
+<center>
+    <form action="{{action}}" method="get">
+        {{#seriesDropMenu}}{{> dropMenu}}{{/seriesDropMenu}}
+        <input class="inputbutton" type="submit" value="Select Series">
+    </form>
+</center>
