--- a/gatherling/templates/partials/addCardSetForm.mustache
+++ b/gatherling/templates/partials/addCardSetForm.mustache
@@ -1,5 +1,5 @@
 <h3><center>Install New Cardset</center></h3>
-<form action="util/insertcardset.php" method="post" enctype="multipart/form-data">
+<form action="insertcardset.php" method="post" enctype="multipart/form-data">
     <table class="form c">
         <input type="hidden" name="return" value="admincp.php" />
         <input type="hidden" name="ret_args" value="view=add_cardset" />
@@ -8,7 +8,7 @@
     </table>
 </form>
 
-<form action="util/insertcardset.php" method="post" enctype="multipart/form-data">
+<form action="insertcardset.php" method="post" enctype="multipart/form-data">
     <h3><center>Or</center></h3>
     <table class="form c">
         <input type="hidden" name="return" value="admincp.php" />
