Don't have a separate pointless template for seriesDropMenu
Most of the places it is used and for other descendents of DropMenu we just use
the dropMenu partial so let's do this in the one place that doesn't do it and
remove the now-unused template.

--- a/gatherling/templates/partials/seasonSelect.mustache
+++ b/gatherling/templates/partials/seasonSelect.mustache
@@ -3,7 +3,7 @@
         <tr>
             <th>Series</th>
             <td>
-                {{#seriesDropMenu}}{{> seriesDropMenu}}{{/seriesDropMenu}}
+                {{#seriesDropMenu}}{{> dropMenu}}{{seriesDropMenu}}
             </td>
         </tr>
         <tr>
